<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/key_setting_title"
        android:title="@string/setting" >
        <ListPreference
            android:defaultValue="30"
            android:entries="@array/scan_sec_string"
            android:entryValues="@array/scan_sec_value"
            android:key="@string/key_scan_sec"
            android:title="@string/scan_sec" />
        <ListPreference
            android:defaultValue="action_3g_retry"
            android:entries="@array/action_3g_retry_strategy_option_string"
            android:entryValues="@array/action_3g_retry_strategy_option_value"
            android:key="@string/key_action_3g_retry_strategy"
            android:title="@string/action_3g_retry_strategy" />
        <ListPreference
            android:defaultValue="action_wifi_to_3g"
            android:entries="@array/action_wifi_retry_strategy_option_string"
            android:entryValues="@array/action_wifi_retry_strategy_option_value"
            android:key="@string/key_action_wifi_retry_strategy"
            android:title="@string/action_wifi_retry_strategy" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_setting_auto_start"
            android:title="@string/auto_start" />

        <Preference
            android:key="@string/key_upgrade_app"
            android:summary="@string/reconnect_last_time"
            android:title="@string/today_last_connect_count" />
        <Preference
            android:key="@string/key_setting_support_me"
            android:summary="@string/support_me_hint"
            android:title="@string/support_me" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/key_notify_title"
        android:title="@string/warning_method" >
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/warning_option_string"
            android:entryValues="@array/warning_option_value"
            android:key="@string/key_notify_audio"
            android:title="@string/warning_audio" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/warning_option_string"
            android:entryValues="@array/warning_option_value"
            android:key="@string/key_notify_vibrate"
            android:title="@string/warning_vibrate" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/key_notify_screen"
            android:title="@string/warning_screen" />

        <ListPreference
            android:defaultValue="0"
            android:enabled="false"
            android:entries="@array/warning_option_string"
            android:entryValues="@array/warning_option_value"
            android:key="@string/key_notify_flash"
            android:title="@string/warning_flash" />
    </PreferenceCategory>

</PreferenceScreen>